[gd_scene load_steps=16 format=3 uid="uid://c8kci4lco1cpk"]

[ext_resource type="Script" uid="uid://b8r4uv472sels" path="res://scripts/boss.gd" id="1_1ex25"]
[ext_resource type="Texture2D" uid="uid://daa4ndvs15yjf" path="res://assets/sprites/flying_demon/flying_demon/style_A/spritesheet/spritesheet.png" id="2_3uc6t"]
[ext_resource type="PackedScene" uid="uid://c62xuysx52uq6" path="res://scenes/enemies/projectile.tscn" id="2_ub7yk"]
[ext_resource type="AudioStream" uid="uid://n7unagud83m4" path="res://assets/audio/fire_bomb.ogg" id="4_ian0n"]
[ext_resource type="AudioStream" uid="uid://bxhfhq5rhoqfd" path="res://assets/audio/BossDead.ogg" id="5_yye4w"]

[sub_resource type="CircleShape2D" id="CircleShape2D_3uc6t"]
radius = 19.0263

[sub_resource type="CircleShape2D" id="CircleShape2D_ub7yk"]
radius = 20.0

[sub_resource type="Animation" id="Animation_uq4kr"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [34]
}

[sub_resource type="Animation" id="Animation_ian0n"]
resource_name = "attack"
step = 0.166667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.166667, 0.333333, 0.5, 0.666667, 0.833333),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [0, 1, 2, 3, 4, 5]
}

[sub_resource type="Animation" id="Animation_rvo7g"]
resource_name = "die"
step = 0.0416667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0416667, 0.0833333, 0.125, 0.166667, 0.208333, 0.25, 0.3125, 0.375, 0.4375, 0.5, 0.5625, 0.625, 0.6875, 0.75, 0.8125, 0.875, 0.9375),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [68, 69, 70, 71, 72, 73, 74, 75, 76, 77, 78, 79, 80, 81, 82, 83, 84, 84]
}

[sub_resource type="Animation" id="Animation_yye4w"]
resource_name = "hurt"
length = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0333333, 0.0666667, 0.1, 0.133333, 0.166667, 0.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [102, 103, 104, 105, 106, 107, 108]
}

[sub_resource type="Animation" id="Animation_ub7yk"]
resource_name = "idle"
length = 0.6
loop_mode = 1
step = 0.0833333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0833333, 0.166667, 0.25, 0.333333, 0.416667, 0.5, 0.583333),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [85, 86, 87, 88, 89, 90, 91, 92]
}

[sub_resource type="Animation" id="Animation_7dnpc"]
resource_name = "mount_attack"
step = 0.125
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375, 0.5, 0.625, 0.75, 0.875),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [17, 18, 19, 20, 21, 22, 23, 24]
}

[sub_resource type="Animation" id="Animation_h1cus"]
resource_name = "swoop"
length = 0.60002
loop_mode = 1
step = 0.125
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0833333, 0.166667, 0.25, 0.333333, 0.416667, 0.5, 0.583333),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [85, 86, 87, 88, 89, 90, 91, 92]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_h1cus"]
_data = {
&"RESET": SubResource("Animation_uq4kr"),
&"attack": SubResource("Animation_ian0n"),
&"die": SubResource("Animation_rvo7g"),
&"hurt": SubResource("Animation_yye4w"),
&"idle": SubResource("Animation_ub7yk"),
&"mount_attack": SubResource("Animation_7dnpc"),
&"swoop": SubResource("Animation_h1cus")
}

[node name="Boss" type="CharacterBody2D"]
script = ExtResource("1_1ex25")
projectile_scene = ExtResource("2_ub7yk")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_3uc6t")
hframes = 17
vframes = 8
frame = 34
region_rect = Rect2(0, 0, 1802, 832)

[node name="HitBox" type="Area2D" parent="." groups=["enemies"]]
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
position = Vector2(1, 12)
shape = SubResource("CircleShape2D_3uc6t")

[node name="HurtBox" type="Area2D" parent="." groups=["player"]]
collision_layer = 3
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
position = Vector2(1, 0)
shape = SubResource("CircleShape2D_ub7yk")

[node name="AttackTimer" type="Timer" parent="."]

[node name="Muzzle" type="Marker2D" parent="."]
position = Vector2(8, 13)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_h1cus")
}
autoplay = "idle"

[node name="FireSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_ian0n")
max_polyphony = 4

[node name="BossDead" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_yye4w")
pitch_scale = 0.56
max_polyphony = 4

[connection signal="body_entered" from="HitBox" to="." method="_on_Collision_body_entered"]
[connection signal="body_entered" from="HitBox" to="." method="_on_Hitbox_body_entered"]
[connection signal="body_entered" from="HurtBox" to="." method="_on_Hurtbox_body_entered"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_AttackTimer_timeout"]
